<resources>
    <string name="app_name">Foodxy Partner</string>
    <string name="product_create">Crear</string>
    <string name="product_msg_loading">Prepando todo…</string>
    <string name="hint_name">Nombre del producto</string>
    <string name="hint_description">Descripción</string>
    <string name="hint_quantity">Cantidad</string>
    <string name="hint_price">Precio</string>

    <string name="order_total_price">Total: $%1$.2f COP</string>

    <string name="order_track_shipment">Seguir envío</string>
    <string name="order_status">Estado: %1$s</string>
    <string name="order_id">ID: %1$s</string>
    <string name="order_chat_help">¿Necesitas ayuda?</string>
    <string name="order_title">Historial de compras</string>

    <string name="order_status_ordered">Aprobado</string>
    <string name="order_status_preparing">Procesando</string>
    <string name="order_status_sent">Enviado</string>
    <string name="order_status_delivered">Entregado</string>
    <string name="order_status_unknown">Desconocido</string>

    <string name="track_title">Rastreo</string>
    <string name="hint_status">Estado</string>

    <string name="hint_chat">Escibe algo</string>
    <string name="chat_title">Soporte</string>
        <!-- ... -->
    <string name="facebook_application_id" translatable="false">594090685155556</string>
        <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb594090685155556</string>
    <string name="login_welcome">Bienvenido, por favor inicia sesión.</string>
    <string name="login_email">Email</string>
    <string name="login_google">Google</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_phone">Phone</string>

    <string name="product_dialog_delete_title">¿Eliminar producto?</string>
    <string name="product_dialog_delete_msg">El producto se eliminará permanentemente.</string>
    <string name="product_dialog_delete_confirm">Eliminar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="hint_tittle">Título</string>
    <string name="hint_topic">Topic</string>
    <string name="action_promo">Promociones</string>


</resources>