<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/common_padding_default"

    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint_tittle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilTittle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTopic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_topic"
        android:layout_marginTop="@dimen/common_padding_min"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgProductPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/gray_100"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tilTopic"
        app:layout_constraintDimensionRatio="16:9"

        />

    <ImageButton
        android:id="@+id/ibProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_image_search"
        app:layout_constraintBottom_toBottomOf="@id/imgProductPreview"
        app:layout_constraintEnd_toEndOf="@id/imgProductPreview"
        app:layout_constraintStart_toStartOf="@id/imgProductPreview"
        app:layout_constraintTop_toTopOf="@id/imgProductPreview"
        tools:ignore="SpeakableTextPresentCheck" />
    
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:visibility="gone"
        tools:visibility="visible"
        tools:progress="75"
        app:layout_constraintStart_toStartOf="@id/tilTopic"
        app:layout_constraintEnd_toEndOf="@id/tilTopic"
        app:layout_constraintTop_toBottomOf="@id/tilTopic"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProgress"
        android:layout_width="0dp"
        android:text="Subiendo al 75%"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="@id/progress_bar"
        app:layout_constraintEnd_toEndOf="@id/progress_bar"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"

        />





</androidx.constraintlayout.widget.ConstraintLayout>